# apps/api/src/app.module.ts
@@ -30,6 +30,7 @@ import { ReportCardsModule } from './modules/report-cards/report-cards.module';
 import { SupportModule } from './modules/support/support.module';
 import { FamilyModule } from './modules/family/family.module';
 import { SummariesModule } from './modules/summaries/summaries.module';
+import { MotivationModule } from './modules/motivation/motivation.module';
 import { H5pModule } from './modules/h5p/h5p.module';
 import { AttendanceModule } from './modules/attendance/attendance.module';
 import { AuditModule } from './modules/audit/audit.module';
@@ -120,6 +121,7 @@ import { UsersModule } from './modules/users/users.module';
     SupportModule,
     FamilyModule,
     SummariesModule,
+    MotivationModule,
     HealthModule,
     MetricsModule,
   ],
